Finish implementing the optimization with different algorithms task. Javascript selection boxes now working, and appropriate XML generation implemented

--- a/trunk/web_frontend/static/style.css
+++ b/trunk/web_frontend/static/style.css
@@ -105,6 +105,13 @@ div.review th, div.review td{
     border: 1px dotted gray;
 }
 
+div.algorithm{
+    border: 1px solid gray;
+    margin-left: 2px;
+    margin-right: 20px;
+    padding: 5px;
+}
+
 table.jobtable {
     border-collapse: collapse;
     background: #e6e6e6;
