Add password change form

--- a/trunk/web_frontend/templates/my_account/my_account.html
+++ b/trunk/web_frontend/templates/my_account/my_account.html
@@ -7,7 +7,7 @@
     <li><a href="http://{{request.get_host}}/my_account/jobs/running">Running Jobs <b>({{submitted_job_count}})</b></a></li>
     <li><a href="http://{{request.get_host}}/my_account/jobs/completed">Completed Jobs <b>({{completed_job_count}})</b></a></li>
     <li><a href="http://{{request.get_host}}/my_account/jobs/errors">Errors <b>({{error_count}})</b></a></li>
-    <li>Account settings</li>
+    <li><a href="http://{{request.get_host}}/my_account/change_password">Change password</a></li>
 </ul>
 {% endblock %}
 
