Fix some quirks with job submission and confirmation - The job name must now only be unique among submitted jobs, so multiple unconfirmed jobs can have the same name. Helper.py now removes old unconfirmed jobs.

--- a/trunk/web_frontend/templates/tasks/new_task.html
+++ b/trunk/web_frontend/templates/tasks/new_task.html
@@ -39,12 +39,23 @@ function selectall(select){
 
 {% block breadcrumbs_l3 %}
 {% if type == "SO" %} 
-Sensitivitiy Optimization
+<a href="http://{{request.get_host}}/tasks/new/sensitivity_optimization">Sensitivity Optimization</a>
 {%endif%}
 {% if type == "SS" %}
-Stochastic Simulation
+<a href="http://{{request.get_host}}/tasks/new/stochastic_simulation">Stochastic Simulation</a>
 {% endif %}
-
+{% if type == "PS" %}
+<a href="http://{{request.get_host}}/tasks/new/parallel_scan">Parallel Scan</a>
+{% endif %}
+{% if type == "OR" %}
+<a href="http://{{request.get_host}}/tasks/new/optimization_repeat">Optimization Repeat</a>
+{% endif %}
+{% if type == "PR" %}
+<a href="http://{{request.get_host}}/tasks/new/parameter_estimation_repeat">Parameter Estimation Repeat</a>
+{% endif %}
+{% if type == "OD" %}
+<a href="http://{{request.get_host}}/tasks/new/optimization_repeat_different_algorithms">Optimization Repeat with Different Algorithms</a>
+{% endif %}
 &gt;&gt; {%block breadcrumbs_l4%}{%endblock%}{%endblock%}
 
 {% block body %}
