Ensure that all tasks are scheduled and update the model where appropriate

--- a/trunk/web_frontend/templates/tasks/new_task.html
+++ b/trunk/web_frontend/templates/tasks/new_task.html
@@ -81,6 +81,7 @@ function selectall(select){
         <li><b>Scan task:</b></li>
         <ul>
             <li>The Scan task should be configured as if the run were to take place on a single machine</li>
+            <li>At least one repeat or parameter scan must be added to the Scan task</li>
             <li>An appropriate report must be set for the Scan task</li>
         </ul>
     </ul>
