Chagne urls to allow for site to be placed in an optional subfolder

--- a/trunk/web_frontend/templates/500.html
+++ b/trunk/web_frontend/templates/500.html
@@ -9,5 +9,5 @@
 {% endfor %}
 </ul>
 </div>
-<p><a href="http://{{request.get_host}}">Click here</a> to return home</p>
+<p><a href="{% url index %}">Click here</a> to return home</p>
 {% endblock %}
