--- a/trunk/web_frontend/templates/tasks/tasks.html
+++ b/trunk/web_frontend/templates/tasks/tasks.html
@@ -1,15 +1,15 @@
 {% extends "default.html" %}
 
-{% block breadcrumbs_l2 %} <a href="http://{{request.get_host}}/tasks/">Tasks</a> &gt;&gt; {% block breadcrumbs_l3 %}{%endblock%}{%endblock%}
+{% block breadcrumbs_l2 %} <a href="{% url tasks_home %}">Tasks</a> &gt;&gt; {% block breadcrumbs_l3 %}{%endblock%}{%endblock%}
 
 {% block tasklist %}
 <ul>
-    <li><a href="http://{{request.get_host}}/tasks/new/sensitivity_optimization">Optimization of Sensitivities</a></li>
-    <li><a href="http://{{request.get_host}}/tasks/new/stochastic_simulation">Stochastic Simulation</a></li>
-    <li><a href="http://{{request.get_host}}/tasks/new/parallel_scan">Scan in Parallel</a></li>
-    <li><a href="http://{{request.get_host}}/tasks/new/optimization_repeat">Optimization Repeat</a></li>
-    <li><a href="http://{{request.get_host}}/tasks/new/parameter_estimation_repeat">Parameter Estimation Repeat</a></li>
-    <li><a href="http://{{request.get_host}}/tasks/new/optimization_repeat_different_algorithms">Optimization Repeat (Different Algorithms)</a></li>
+    <li><a href="{% url new_SO%}">Optimization of Sensitivities</a></li>
+    <li><a href="{% url new_SS %}">Stochastic Simulation</a></li>
+    <li><a href="{% url new_PS %}">Scan in Parallel</a></li>
+    <li><a href="{% url new_OR %}">Optimization Repeat</a></li>
+    <li><a href="{% url new_PR %}">Parameter Estimation Repeat</a></li>
+    <li><a href="{% url new_OD %}">Optimization Repeat (Different Algorithms)</a></li>
 </ul>
 {% endblock %}
 
