--- a/trunk/web_frontend/templates/my_account/job_output.html
+++ b/trunk/web_frontend/templates/my_account/job_output.html
@@ -1,7 +1,7 @@
 {% extends "my_account/job_details.html" %}
 
 
-{% block breadcrumbs_l4 %} <a href="http://{{request.get_host}}/my_account/jobs/details/{{job.name}}/output/">Output</a> &gt;&gt;{%block breadcrumbs_l5%}{%endblock%}{%endblock%}
+{% block breadcrumbs_l4 %} <a href="{% url job_output job.name %}">Output</a> &gt;&gt;{%block breadcrumbs_l5%}{%endblock%}{%endblock%}
 
 {% block body %}
 
@@ -26,9 +26,9 @@
 {% endif %}
 {% if job.job_type == 'SS' %}
 <div class = "plot">
-<img src="http://{{request.get_host}}/my_account/jobs/details/{{job.name}}/save/plot.png{{img_string}}" alt="Plot" />
+<img src="{% url plot job.name %}{{img_string}}" alt="Plot" />
 <br>
-<form action="http://{{request.get_host}}/my_account/jobs/details/{{job.name}}/save/plot.png{{img_string}}" method="post">
+<form action="{% url plot job.name %}{{img_string}}" method="post">
 {% csrf_token %}
 <input type="submit" name="download_png" value="Download in .PNG Format">
 <input type="submit" name="download_svg" value="Download in .SVG Format">
