Add version.py and add requestcontext to read version

--- a/trunk/web_frontend/templates/default.html
+++ b/trunk/web_frontend/templates/default.html
@@ -63,7 +63,7 @@ Condor-Copasi Web Frontend - {% block title %} {{ pageTitle }} {% endblock %}
         </div>
     </div>
     <div id="footer">
-        Condor-Copasi Web Frontend, version 0.1. Copyright 2010.
+        Condor-Copasi Web Frontend, version {{version}}. Copyright 2010.
     </div>
 </div>
 </body>
