--- a/trunk/web_frontend/templates/my_account/my_account.html
+++ b/trunk/web_frontend/templates/my_account/my_account.html
@@ -13,7 +13,11 @@
 
 {%block body %}
 
-<p>Account information to go here
-
-
+<p>Select an option from the menu on the left:</p>
+<ul>
+    <li><b>Running Jobs</b> lists newly submitted jobs awaiting submission to the Condor pool, and jobs still running on the Condor pool.</li>
+    <li><b>Completed Jobs</b> lists jobs that finished running on Condor, with results available to download.</li>
+    <li><b>Errors</b> lists jobs that have failed, along with information on why the job may have failed.</li>
+</ul>
+<p>More information on this section is available on the <a href="http://code.google.com/p/condor-copasi/wiki/Usage" target="_blank">Wiki site</a></p>
 {%endblock%}
